--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "test:unit": "jest",
     "test:coverage": "jest --coverage",
     "build:clean": "rm -rf dist/ && rm -f modusoperandi-licit-customstyles-*.*.*.tgz",
-    "lint:js": "eslint \"src/**/*.js\"",
+    "lint:ts": "eslint src --ext .ts,.tsx --fix",
     "lint:css": "stylelint \"**/*.css\"",
-    "lint": "npm run lint:css & npm run lint:js",
+    "lint": "npm run lint:css & npm run lint:ts",
     "ci:build": "tsc --build && copyfiles --up 1 \"src/**/*.css\" dist  && copyfiles package.json dist",
     "ci:bom": "cyclonedx-npm --ignore-npm-errors --short-PURLs --output-format XML --output-file dist/bom.xml"
   },
@@ -29,24 +29,24 @@
   },
   "dependencies": {
     "classnames": "^2.3.1",
-    "color": "3.1.2",
+    "color": "^3.1.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "flatted": "^3.1.0",
     "flow-typed": "^3.3.1",
     "formidable": "^1.2.2",
-    "invariant": "2.2.4",
+    "invariant": "^2.2.4",
     "jquery": "^3.5.1",
-    "katex": "0.11.1",
+    "katex": "^0.11.1",
     "mv": "^2.1.1",
-    "node-mathquill": "0.10.2",
-    "nullthrows": "1.1.1",
+    "node-mathquill": "^0.10.2",
+    "nullthrows": "^1.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "smooth-scroll-into-view-if-needed": "1.1.28",
-    "stable": "0.1.8",
+    "smooth-scroll-into-view-if-needed": "^1.1.28",
+    "stable": "^0.1.8",
     "style-loader": "^2.0.0",
-    "webfontloader": "1.6.28"
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.8.0",
@@ -66,10 +66,10 @@
     "jest-prosemirror": "^2.0.0",
     "jest-sonar-reporter": "^2.0.0",
     "lint-staged": "^10.4.0",
-    "prettier": "^2.1.2",
-    "stylelint": "^13.7.2",
-    "stylelint-config-standard": "^20.0.0",
-    "stylelint-prettier": "^1.2.0",
+    "prettier": "^3.2.4",
+    "stylelint": "^16.2.0",
+    "stylelint-config-standard": "^36.0.0",
+    "stylelint-prettier": "^5.0.0",
     "ts-jest": "^29.0.7",
     "ts-loader": "^9.5.0",
     "ts-node": "^10.4.0"
