--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,10 +30,11 @@
   },
   "include": [
     "src/**/*.ts",
-    "src/**/*.tsx",
-    "src/**/*.js"
+    "src/**/*.tsx"
   ],
   "exclude": [
     "node_modules",
+    "**/*.test.ts",
+    "**/*.test.tsx"
   ]
 }
